EN-19185, EN-19306: UI Tweaks and UI fixes (#5671)
* Fixed – In a Non Roled User Notification panel, text is overflowing in 'Clear All' dropdown
* Fixed – clicking on empty links causes the page to scroll top;
* Fixed – Watch/Unwatch this dataset button moves when clicked.
* Use double quotes for HTML and reindent attributes in span tag
* Code refactoring to keep the notification title rendering DRY

--- a/common/notifications/components/NotificationList/panel-footer.scss
+++ b/common/notifications/components/NotificationList/panel-footer.scss
@@ -64,6 +64,7 @@
   padding: 10px;
   position: absolute;
   right: 0;
+  white-space: normal;
 
   &:before,
   &:after {
