--- a/common/notifications/components/NotificationList/panel-header.scss
+++ b/common/notifications/components/NotificationList/panel-header.scss
@@ -59,6 +59,7 @@
 
   .close-panel-link {
     background-color: transparent;
+    cursor: pointer;
     font-size: 13px;
     right: 0;
 
